// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpanderPanel [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Panel
  className="lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed"
  hasMargin={true}
  isGutterless={false}
  isScrollable={true}
>
  <Panel.Header
    className="lucid-ExpanderPanel-header"
    onClick={[Function]}
  >
    <span
      className="lucid-ExpanderPanel-icon"
    >
      <ChevronIcon
        direction="down"
      />
    </span>
    <span>
      Show More
    </span>
  </Panel.Header>
  <Collapsible
    className="lucid-ExpanderPanel-content"
    isAnimated={true}
    isExpanded={false}
    isMountControlled={true}
    mountControlThreshold={4}
    rootType="div"
  >
    <div
      className="lucid-ExpanderPanel-content-inner lucid-ExpanderPanel-content-inner-has-padding"
    >
      <ExpanderPanel.Header>
        Show More
      </ExpanderPanel.Header>
      <div
        key="0"
      />
      <div
        key="1"
      >
        --------------
      </div>
      <div
        key="2"
      >
        -----------------------------
      </div>
      <div
        key="3"
      >
        ------------------------------------------
      </div>
      <div
        key="4"
      >
        -----------------------------------------------------
      </div>
      <div
        key="5"
      >
        ---------------------------------------------------------------
      </div>
      <div
        key="6"
      >
        ---------------------------------------------------------------------
      </div>
      <div
        key="7"
      >
        -------------------------------------------------------------------------
      </div>
      <div
        key="8"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="9"
      >
        -------------------------------------------------------------------------
      </div>
      <div
        key="10"
      >
        --------------------------------------------------------------------
      </div>
      <div
        key="11"
      >
        ------------------------------------------------------------
      </div>
      <div
        key="12"
      >
        --------------------------------------------------
      </div>
      <div
        key="13"
      >
        --------------------------------------
      </div>
      <div
        key="14"
      >
        -------------------------
      </div>
      <div
        key="15"
      >
        ----------
      </div>
      <div
        key="16"
      />
      <div
        key="17"
      />
      <div
        key="18"
      />
      <div
        key="19"
      />
      <div
        key="20"
      />
      <div
        key="21"
      />
      <div
        key="22"
      />
      <div
        key="23"
      />
      <div
        key="24"
      />
      <div
        key="25"
      />
      <div
        key="26"
      />
      <div
        key="27"
      />
      <div
        key="28"
      />
      <div
        key="29"
      />
      <div
        key="30"
      />
      <div
        key="31"
      />
      <div
        key="32"
      >
        --------
      </div>
      <div
        key="33"
      >
        -----------------------
      </div>
      <div
        key="34"
      >
        -------------------------------------
      </div>
      <div
        key="35"
      >
        -------------------------------------------------
      </div>
      <div
        key="36"
      >
        -----------------------------------------------------------
      </div>
      <div
        key="37"
      >
        -------------------------------------------------------------------
      </div>
      <div
        key="38"
      >
        ------------------------------------------------------------------------
      </div>
      <div
        key="39"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="40"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="41"
      >
        ----------------------------------------------------------------------
      </div>
      <div
        key="42"
      >
        ----------------------------------------------------------------
      </div>
      <div
        key="43"
      >
        -------------------------------------------------------
      </div>
      <div
        key="44"
      >
        -------------------------------------------
      </div>
      <div
        key="45"
      >
        ------------------------------
      </div>
      <div
        key="46"
      >
        ----------------
      </div>
      <div
        key="47"
      >
        -
      </div>
      <div
        key="48"
      />
      <div
        key="49"
      />
      <div
        key="50"
      />
      <div
        key="51"
      />
      <div
        key="52"
      />
      <div
        key="53"
      />
      <div
        key="54"
      />
      <div
        key="55"
      />
      <div
        key="56"
      />
      <div
        key="57"
      />
      <div
        key="58"
      />
      <div
        key="59"
      />
      <div
        key="60"
      />
      <div
        key="61"
      />
      <div
        key="62"
      />
      <div
        key="63"
      >
        --
      </div>
      <div
        key="64"
      >
        -----------------
      </div>
      <div
        key="65"
      >
        -------------------------------
      </div>
      <div
        key="66"
      >
        --------------------------------------------
      </div>
      <div
        key="67"
      >
        -------------------------------------------------------
      </div>
      <div
        key="68"
      >
        ----------------------------------------------------------------
      </div>
      <div
        key="69"
      >
        ----------------------------------------------------------------------
      </div>
      <div
        key="70"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="71"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="72"
      >
        ------------------------------------------------------------------------
      </div>
      <div
        key="73"
      >
        -------------------------------------------------------------------
      </div>
      <div
        key="74"
      >
        -----------------------------------------------------------
      </div>
      <div
        key="75"
      >
        ------------------------------------------------
      </div>
      <div
        key="76"
      >
        ------------------------------------
      </div>
      <div
        key="77"
      >
        ----------------------
      </div>
      <div
        key="78"
      >
        --------
      </div>
      <div
        key="79"
      />
      <div
        key="80"
      />
      <div
        key="81"
      />
      <div
        key="82"
      />
      <div
        key="83"
      />
      <div
        key="84"
      />
      <div
        key="85"
      />
      <div
        key="86"
      />
      <div
        key="87"
      />
      <div
        key="88"
      />
      <div
        key="89"
      />
      <div
        key="90"
      />
      <div
        key="91"
      />
      <div
        key="92"
      />
      <div
        key="93"
      />
      <div
        key="94"
      />
      <div
        key="95"
      >
        -----------
      </div>
      <div
        key="96"
      >
        -------------------------
      </div>
      <div
        key="97"
      >
        ---------------------------------------
      </div>
      <div
        key="98"
      >
        ---------------------------------------------------
      </div>
      <div
        key="99"
      >
        -------------------------------------------------------------
      </div>
    </div>
  </Collapsible>
</Panel>
`;

exports[`ExpanderPanel [common] example testing should match snapshot(s) for 2.no-padding 1`] = `
<Panel
  className="lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed"
  hasMargin={true}
  isGutterless={false}
  isScrollable={true}
>
  <Panel.Header
    className="lucid-ExpanderPanel-header"
    onClick={[Function]}
  >
    <span
      className="lucid-ExpanderPanel-icon"
    >
      <ChevronIcon
        direction="down"
      />
    </span>
    <span>
      Show More
    </span>
  </Panel.Header>
  <Collapsible
    className="lucid-ExpanderPanel-content"
    isAnimated={true}
    isExpanded={false}
    isMountControlled={true}
    mountControlThreshold={4}
    rootType="div"
  >
    <div
      className="lucid-ExpanderPanel-content-inner"
    >
      <ExpanderPanel.Header>
        Show More
      </ExpanderPanel.Header>
      <div
        key="0"
      />
      <div
        key="1"
      >
        --------------
      </div>
      <div
        key="2"
      >
        -----------------------------
      </div>
      <div
        key="3"
      >
        ------------------------------------------
      </div>
      <div
        key="4"
      >
        -----------------------------------------------------
      </div>
      <div
        key="5"
      >
        ---------------------------------------------------------------
      </div>
      <div
        key="6"
      >
        ---------------------------------------------------------------------
      </div>
      <div
        key="7"
      >
        -------------------------------------------------------------------------
      </div>
      <div
        key="8"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="9"
      >
        -------------------------------------------------------------------------
      </div>
      <div
        key="10"
      >
        --------------------------------------------------------------------
      </div>
      <div
        key="11"
      >
        ------------------------------------------------------------
      </div>
      <div
        key="12"
      >
        --------------------------------------------------
      </div>
      <div
        key="13"
      >
        --------------------------------------
      </div>
      <div
        key="14"
      >
        -------------------------
      </div>
      <div
        key="15"
      >
        ----------
      </div>
      <div
        key="16"
      />
      <div
        key="17"
      />
      <div
        key="18"
      />
      <div
        key="19"
      />
      <div
        key="20"
      />
      <div
        key="21"
      />
      <div
        key="22"
      />
      <div
        key="23"
      />
      <div
        key="24"
      />
      <div
        key="25"
      />
      <div
        key="26"
      />
      <div
        key="27"
      />
      <div
        key="28"
      />
      <div
        key="29"
      />
      <div
        key="30"
      />
      <div
        key="31"
      />
      <div
        key="32"
      >
        --------
      </div>
      <div
        key="33"
      >
        -----------------------
      </div>
      <div
        key="34"
      >
        -------------------------------------
      </div>
      <div
        key="35"
      >
        -------------------------------------------------
      </div>
      <div
        key="36"
      >
        -----------------------------------------------------------
      </div>
      <div
        key="37"
      >
        -------------------------------------------------------------------
      </div>
      <div
        key="38"
      >
        ------------------------------------------------------------------------
      </div>
      <div
        key="39"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="40"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="41"
      >
        ----------------------------------------------------------------------
      </div>
      <div
        key="42"
      >
        ----------------------------------------------------------------
      </div>
      <div
        key="43"
      >
        -------------------------------------------------------
      </div>
      <div
        key="44"
      >
        -------------------------------------------
      </div>
      <div
        key="45"
      >
        ------------------------------
      </div>
      <div
        key="46"
      >
        ----------------
      </div>
      <div
        key="47"
      >
        -
      </div>
      <div
        key="48"
      />
      <div
        key="49"
      />
      <div
        key="50"
      />
      <div
        key="51"
      />
      <div
        key="52"
      />
      <div
        key="53"
      />
      <div
        key="54"
      />
      <div
        key="55"
      />
      <div
        key="56"
      />
      <div
        key="57"
      />
      <div
        key="58"
      />
      <div
        key="59"
      />
      <div
        key="60"
      />
      <div
        key="61"
      />
      <div
        key="62"
      />
      <div
        key="63"
      >
        --
      </div>
      <div
        key="64"
      >
        -----------------
      </div>
      <div
        key="65"
      >
        -------------------------------
      </div>
      <div
        key="66"
      >
        --------------------------------------------
      </div>
      <div
        key="67"
      >
        -------------------------------------------------------
      </div>
      <div
        key="68"
      >
        ----------------------------------------------------------------
      </div>
      <div
        key="69"
      >
        ----------------------------------------------------------------------
      </div>
      <div
        key="70"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="71"
      >
        --------------------------------------------------------------------------
      </div>
      <div
        key="72"
      >
        ------------------------------------------------------------------------
      </div>
      <div
        key="73"
      >
        -------------------------------------------------------------------
      </div>
      <div
        key="74"
      >
        -----------------------------------------------------------
      </div>
      <div
        key="75"
      >
        ------------------------------------------------
      </div>
      <div
        key="76"
      >
        ------------------------------------
      </div>
      <div
        key="77"
      >
        ----------------------
      </div>
      <div
        key="78"
      >
        --------
      </div>
      <div
        key="79"
      />
      <div
        key="80"
      />
      <div
        key="81"
      />
      <div
        key="82"
      />
      <div
        key="83"
      />
      <div
        key="84"
      />
      <div
        key="85"
      />
      <div
        key="86"
      />
      <div
        key="87"
      />
      <div
        key="88"
      />
      <div
        key="89"
      />
      <div
        key="90"
      />
      <div
        key="91"
      />
      <div
        key="92"
      />
      <div
        key="93"
      />
      <div
        key="94"
      />
      <div
        key="95"
      >
        -----------
      </div>
      <div
        key="96"
      >
        -------------------------
      </div>
      <div
        key="97"
      >
        ---------------------------------------
      </div>
      <div
        key="98"
      >
        ---------------------------------------------------
      </div>
      <div
        key="99"
      >
        -------------------------------------------------------------
      </div>
    </div>
  </Collapsible>
</Panel>
`;
